StoneCompiler/Antlr/StoneParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 Stone.g 2013-02-23 21:13:45

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Stone.Compiler 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class StoneParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Class_Def", "Class_Def_Body", "DEDENT", "DOUBLE", "Data_Body", "Data_Def", "Data_Def_Item", "EXPONENT", "Expr_Access", "Expr_Call", "Expr_Lambda", "Expr_Message", "Expr_New_Data", "Func_Args", "Func_Declare", "Func_Def", "INDENT", "INT", "LIDENT", "Lambda_Args", "Match_Cross", "Match_Var", "Message_Args", "Message_Declare", "Message_Def", "Message_Item", "Module_Def", "NEWLINE", "NORMAL_STRING", "OP_DIV", "OP_MINUS", "OP_MUL", "OP_PLUS", "Proxy_Def", "Proxy_Def_Body", "Root", "Stmt_Alloc", "Stmt_Assign", "Stmt_Block", "Stmt_Call", "Stmt_If", "Stmt_Return", "Type_Atom", "Type_Cross", "Type_Func", "UIDENT", "WS", "'('", "')'", "','", "'->'", "':'", "'::'", "'='", "'=>'", "'class'", "'data'", "'if'", "'module'", "'proxy'", "'return'", "'|'", "'¡Á'", "'¦Ë'"
	};
	public const int EOF=-1;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int Class_Def=4;
	public const int Class_Def_Body=5;
	public const int DEDENT=6;
	public const int DOUBLE=7;
	public const int Data_Body=8;
	public const int Data_Def=9;
	public const int Data_Def_Item=10;
	public const int EXPONENT=11;
	public const int Expr_Access=12;
	public const int Expr_Call=13;
	public const int Expr_Lambda=14;
	public const int Expr_Message=15;
	public const int Expr_New_Data=16;
	public const int Func_Args=17;
	public const int Func_Declare=18;
	public const int Func_Def=19;
	public const int INDENT=20;
	public const int INT=21;
	public const int LIDENT=22;
	public const int Lambda_Args=23;
	public const int Match_Cross=24;
	public const int Match_Var=25;
	public const int Message_Args=26;
	public const int Message_Declare=27;
	public const int Message_Def=28;
	public const int Message_Item=29;
	public const int Module_Def=30;
	public const int NEWLINE=31;
	public const int NORMAL_STRING=32;
	public const int OP_DIV=33;
	public const int OP_MINUS=34;
	public const int OP_MUL=35;
	public const int OP_PLUS=36;
	public const int Proxy_Def=37;
	public const int Proxy_Def_Body=38;
	public const int Root=39;
	public const int Stmt_Alloc=40;
	public const int Stmt_Assign=41;
	public const int Stmt_Block=42;
	public const int Stmt_Call=43;
	public const int Stmt_If=44;
	public const int Stmt_Return=45;
	public const int Type_Atom=46;
	public const int Type_Cross=47;
	public const int Type_Func=48;
	public const int UIDENT=49;
	public const int WS=50;

	public StoneParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public StoneParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[46+1];


		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return StoneParser.tokenNames; } }
	public override string GrammarFileName { get { return "Stone.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_parse();
	partial void LeaveRule_parse();

	// $ANTLR start "parse"
	// Stone.g:98:8: public parse : ( module_def )+ ( NEWLINE )* EOF -> ^( Root ( module_def )+ ) ;
	[GrammarRule("parse")]
	public AstParserRuleReturnScope<CommonTree, CommonToken> parse()
	{
		EnterRule_parse();
		EnterRule("parse", 1);
		TraceIn("parse", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken NEWLINE2 = default(CommonToken);
		CommonToken EOF3 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> module_def1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree NEWLINE2_tree = default(CommonTree);
		CommonTree EOF3_tree = default(CommonTree);
		RewriteRuleITokenStream stream_NEWLINE=new RewriteRuleITokenStream(adaptor,"token NEWLINE");
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_module_def=new RewriteRuleSubtreeStream(adaptor,"rule module_def");
		try { DebugEnterRule(GrammarFileName, "parse");
		DebugLocation(98, 1);
		try
		{
			// Stone.g:99:2: ( ( module_def )+ ( NEWLINE )* EOF -> ^( Root ( module_def )+ ) )
			DebugEnterAlt(1);
			// Stone.g:99:4: ( module_def )+ ( NEWLINE )* EOF
			{
			DebugLocation(99, 4);
			// Stone.g:99:4: ( module_def )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				try
				{
					alt1 = dfa1.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// Stone.g:99:4: module_def
					{
					DebugLocation(99, 4);
					PushFollow(Follow._module_def_in_parse296);
					module_def1=module_def();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_module_def.Add(module_def1.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(99, 16);
			// Stone.g:99:16: ( NEWLINE )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==NEWLINE))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// Stone.g:99:16: NEWLINE
					{
					DebugLocation(99, 16);
					NEWLINE2=(CommonToken)Match(input,NEWLINE,Follow._NEWLINE_in_parse299); if (state.failed) return retval; 
					if (state.backtracking == 0) stream_NEWLINE.Add(NEWLINE2);


					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(99, 25);
			EOF3=(CommonToken)Match(input,EOF,Follow._EOF_in_parse302); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF3);



			{
			// AST REWRITE
			// elements: module_def
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 99:29: -> ^( Root ( module_def )+ )
			{
				DebugLocation(99, 32);
				// Stone.g:99:32: ^( Root ( module_def )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(99, 34);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(Root, "Root"), root_1);

				DebugLocation(99, 39);
				if (!(stream_module_def.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_module_def.HasNext )
				{
					DebugLocation(99, 39);
					adaptor.AddChild(root_1, stream_module_def.NextTree());

				}
				stream_module_def.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("parse", 1);
			LeaveRule("parse", 1);
			LeaveRule_parse();
		}
		DebugLocation(100, 1);
		} finally { DebugExitRule(GrammarFileName, "parse"); }
		return retval;

	}
	// $ANTLR end "parse"

	partial void EnterRule_module_def();
	partial void LeaveRule_module_def();

	// $ANTLR start "module_def"
	// Stone.g:102:1: module_def : ( NEWLINE )* 'module' UIDENT NEWLINE ( INDENT module_inner ( NEWLINE )* DEDENT ) -> ^( Module_Def UIDENT module_inner ) ;
	[GrammarRule("module_def")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> module_def()
	{
		EnterRule_module_def();
		EnterRule("module_def", 2);
		TraceIn("module_def", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken NEWLINE4 = default(CommonToken);
		CommonToken string_literal5 = default(CommonToken);
		CommonToken UIDENT6 = default(CommonToken);
		CommonToken NEWLINE7 = default(CommonToken);
		CommonToken INDENT8 = default(CommonToken);
		CommonToken NEWLINE10 = default(CommonToken);
		CommonToken DEDENT11 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> module_inner9 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree NEWLINE4_tree = default(CommonTree);
		CommonTree string_literal5_tree = default(CommonTree);
		CommonTree UIDENT6_tree = default(CommonTree);
		CommonTree NEWLINE7_tree = default(CommonTree);
		CommonTree INDENT8_tree = default(CommonTree);
		CommonTree NEWLINE10_tree = default(CommonTree);
		CommonTree DEDENT11_tree = default(CommonTree);
		RewriteRuleITokenStream stream_UIDENT=new RewriteRuleITokenStream(adaptor,"token UIDENT");
		RewriteRuleITokenStream stream_DEDENT=new RewriteRuleITokenStream(adaptor,"token DEDENT");
		RewriteRuleITokenStream stream_NEWLINE=new RewriteRuleITokenStream(adaptor,"token NEWLINE");
		RewriteRuleITokenStream stream_62=new RewriteRuleITokenStream(adaptor,"token 62");
		RewriteRuleITokenStream stream_INDENT=new RewriteRuleITokenStream(adaptor,"token INDENT");
		RewriteRuleSubtreeStream stream_module_inner=new RewriteRuleSubtreeStream(adaptor,"rule module_inner");
		try { DebugEnterRule(GrammarFileName, "module_def");
		DebugLocation(102, 1);
		try
		{
			// Stone.g:103:2: ( ( NEWLINE )* 'module' UIDENT NEWLINE ( INDENT module_inner ( NEWLINE )* DEDENT ) -> ^( Module_Def UIDENT module_inner ) )
			DebugEnterAlt(1);
			// Stone.g:103:4: ( NEWLINE )* 'module' UIDENT NEWLINE ( INDENT module_inner ( NEWLINE )* DEDENT )
			{
			DebugLocation(103, 4);
			// Stone.g:103:4: ( NEWLINE )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==NEWLINE))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// Stone.g:103:4: NEWLINE
					{
					DebugLocation(103, 4);
					NEWLINE4=(CommonToken)Match(input,NEWLINE,Follow._NEWLINE_in_module_def322); if (state.failed) return retval; 
					if (state.backtracking == 0) stream_NEWLINE.Add(NEWLINE4);


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }

			DebugLocation(103, 13);
			string_literal5=(CommonToken)Match(input,62,Follow._62_in_module_def325); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_62.Add(string_literal5);

			DebugLocation(103, 22);
			UIDENT6=(CommonToken)Match(input,UIDENT,Follow._UIDENT_in_module_def327); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_UIDENT.Add(UIDENT6);

			DebugLocation(103, 29);
			NEWLINE7=(CommonToken)Match(input,NEWLINE,Follow._NEWLINE_in_module_def329); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_NEWLINE.Add(NEWLINE7);

			DebugLocation(103, 37);
			// Stone.g:103:37: ( INDENT module_inner ( NEWLINE )* DEDENT )
			DebugEnterAlt(1);
			// Stone.g:103:38: INDENT module_inner ( NEWLINE )* DEDENT
			{
			DebugLocation(103, 38);
			INDENT8=(CommonToken)Match(input,INDENT,Follow._INDENT_in_module_def332); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_INDENT.Add(INDENT8);

			DebugLocation(103, 45);
			PushFollow(Follow._module_inner_in_module_def334);
			module_inner9=module_inner();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_module_inner.Add(module_inner9.Tree);
			DebugLocation(103, 58);
			// Stone.g:103:58: ( NEWLINE )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==NEWLINE))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// Stone.g:103:58: NEWLINE
					{
					DebugLocation(103, 58);
					NEWLINE10=(CommonToken)Match(input,NEWLINE,Follow._NEWLINE_in_module_def336); if (state.failed) return retval; 
					if (state.backtracking == 0) stream_NEWLINE.Add(NEWLINE10);


					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(103, 67);
			DEDENT11=(CommonToken)Match(input,DEDENT,Follow._DEDENT_in_module_def339); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_DEDENT.Add(DEDENT11);


			}



			{
			// AST REWRITE
			// elements: module_inner, UIDENT
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 103:75: -> ^( Module_Def UIDENT module_inner )
			{
				DebugLocation(103, 78);
				// Stone.g:103:78: ^( Module_Def UIDENT module_inner )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(103, 80);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(Module_Def, "Module_Def"), root_1);

				DebugLocation(103, 91);
				adaptor.AddChild(root_1, stream_UIDENT.NextNode());
				DebugLocation(103, 98);
				adaptor.AddChild(root_1, stream_module_inner.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("module_def", 2);
			LeaveRule("module_def", 2);
			LeaveRule_module_def();
		}
		DebugLocation(104, 1);
		} finally { DebugExitRule(GrammarFileName, "module_def"); }
		return retval;

	}
	// $ANTLR end "module_def"

	partial void EnterRule_module_inner();
	partial void LeaveRule_module_inner();

	// $ANTLR start "module_inner"
	// Stone.g:106:1: module_inner : ( ( block )+ -> ( block )+ | INDENT module_inner ( NEWLINE )* DEDENT -> module_inner );
	[GrammarRule("module_inner")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> module_inner()
	{
		EnterRule_module_inner();
		EnterRule("module_inner", 3);
		TraceIn("module_inner", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken INDENT13 = default(CommonToken);
		CommonToken NEWLINE15 = default(CommonToken);
		CommonToken DEDENT16 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> block12 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> module_inner14 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree INDENT13_tree = default(CommonTree);
		CommonTree NEWLINE15_tree = default(CommonTree);
		CommonTree DEDENT16_tree = default(CommonTree);
		RewriteRuleITokenStream stream_DEDENT=new RewriteRuleITokenStream(adaptor,"token DEDENT");
		RewriteRuleITokenStream stream_NEWLINE=new RewriteRuleITokenStream(adaptor,"token NEWLINE");
		RewriteRuleITokenStream stream_INDENT=new RewriteRuleITokenStream(adaptor,"token INDENT");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		RewriteRuleSubtreeStream stream_module_inner=new RewriteRuleSubtreeStream(adaptor,"rule module_inner");
		try { DebugEnterRule(GrammarFileName, "module_inner");
		DebugLocation(106, 1);
		try
		{
			// Stone.g:107:2: ( ( block )+ -> ( block )+ | INDENT module_inner ( NEWLINE )* DEDENT -> module_inner )
			int alt7=2;
			try { DebugEnterDecision(7, false);
			int LA7_0 = input.LA(1);

			if ((LA7_0==LIDENT||LA7_0==NEWLINE||(LA7_0>=59 && LA7_0<=60)||(LA7_0>=62 && LA7_0<=63)))
			{
				alt7 = 1;
			}
			else if ((LA7_0==INDENT))
			{
				alt7 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 7, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// Stone.g:107:4: ( block )+
				{
				DebugLocation(107, 4);
				// Stone.g:107:4: ( block )+
				int cnt5=0;
				try { DebugEnterSubRule(5);
				while (true)
				{
					int alt5=2;
					try { DebugEnterDecision(5, false);
					try
					{
						alt5 = dfa5.Predict(input);
					}
					catch (NoViableAltException nvae)
					{
						DebugRecognitionException(nvae);
						throw;
					}
					} finally { DebugExitDecision(5); }
					switch (alt5)
					{
					case 1:
						DebugEnterAlt(1);
						// Stone.g:107:4: block
						{
						DebugLocation(107, 4);
						PushFollow(Follow._block_in_module_inner361);
						block12=block();
						PopFollow();
						if (state.failed) return retval;
						if (state.backtracking == 0) stream_block.Add(block12.Tree);

						}
						break;

					default:
						if (cnt5 >= 1)
							goto loop5;

						if (state.backtracking>0) {state.failed=true; return retval;}
						EarlyExitException eee5 = new EarlyExitException( 5, input );
						DebugRecognitionException(eee5);
						throw eee5;
					}
					cnt5++;
				}
				loop5:
					;

				} finally { DebugExitSubRule(5); }



				{
				// AST REWRITE
				// elements: block
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
